--- a/frontend-chat/index.html
+++ b/frontend-chat/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" type="text/css"/> 
 </head>
 <body>
-    
-    <form>
-        <input name="msg">
-    </form>
-    
-    <div class="display">
+
+    <div class="container">
+        <div class="display">
+        </div>
+
+        <form>
+            <input name="msg">
+        </form>
     </div>
 
     <script>
